<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,RelativeOverlap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/img_settings"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="15dp"
            android:src="@drawable/setting"
            app:tint="@color/white"
            android:layout_centerVertical="true"
            />

        <LinearLayout
            android:id="@+id/premium"
            android:layout_width="124dp"
            android:layout_height="44dp"
            android:background="@drawable/curved_background"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/crown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/premium"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/disconnected"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="100dp" />

    <ImageView
        android:layout_below="@+id/tv_connection_status"
        android:layout_marginTop="30dp"
        android:id="@+id/img_connect"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/svg_switch"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_marginTop="30sp"
        android:layout_below="@+id/img_connect"
        android:id="@+id/rl_select_location"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/curved_background"
        android:layout_centerHorizontal="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/country_flag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_earth"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/country_flag">

            <TextView
                android:id="@+id/selected_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/server_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textColor="@android:color/white"
                android:alpha="0.5"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/right"
            app:tint="@color/white"
            android:padding="11dp"
            android:background="@drawable/circular_background"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/rl_select_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_downloaded_traffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0_b"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/svg_download_upload"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tv_uploaded_traffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0_b"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/earth_bottom"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#9BA9FF"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>
